# cockpitdecks-editor

./: README.md  pyproject.toml
src/cockpitdecks_editor/: app.py  icon_loader.py
src/cockpitdecks_editor/services/: desktop_settings.py  live_apis.py  native_preview.py  ssl_certs.py  targets.py  xplane_refs.py
src/cockpitdecks_editor/ui/: app_style.py  button_form.py  dataref_tab.py  designer_tab.py  editor_tab.py  logs_tab.py  main_window.py  syntax.py  templates.py
